# sql-databricks-glot

./: pyproject.toml  sample.sql  test_glot.py
