[tool.poetry]
name = "sql-databricks-glot"
version = "0.1.0"
description = ""
authors = ["Gyutak Kim <gyutak.kim@devsisters.com>"]

[tool.poetry.dependencies]
python = "^3.10"
sqlglot = "^10.4.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
